cleaned up package json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,4 @@
 {
     "name": "datawrapper",
-    "version": "1.2",
-    "devDependencies": {
-        "tape": "~0.0.4"
-    },
-    "testling": {
-        "files": "test/*.js",
-        "browsers": {
-            "ie": [ 8, 9 ],
-            "firefox": [ 13 ],
-            "chrome": [ 20 ],
-            "safari": [ 5.1 ],
-            "opera": [ 12 ]
-        }
-    }
+    "version": "1.2.1"
 }
