--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
     "name": "datawrapper",
-    "version": "1.4.1"
+    "version": "1.4.2",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/datawrapper/datawrapper.git"
+    }
 }
