Added repository to package.json to enable plugin update

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
-    "version": "0.1",
+    "version": "0.3",
     "author": "Pierre Bellon",
+    "repository": {
+        "type": "git",
+        "url": "git@git.jplusplus.org:dw-plugin-zip-export.git"
+    }
 }
