--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
     "name": "color-gradient-selector",
-    "version": "0.0.1"
+    "version": "0.0.1",
+    "repository": {
+        "type": "git",
+        "url": "git@git.jplusplus.org:dw-plugin-color-gradient-selector"
+    }
 }
