--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "color-category-selector",
     "description": "Provides a new option type for selecting and customizing colors for categorical values, eg for usage in maps.",
     "version": "0.0.1",
+    "dependencies": {
+        "core": "1.5.*"
+    },
     "repository": {
         "type": "git",
         "url": "git@git.jplusplus.org:dw-plugin-color-gradient-selector"
