--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "version": "0.3",
+    "name": "export-zip",
+    "version": "0.3.1",
     "author": "Pierre Bellon",
     "repository": {
         "type": "git",
-        "url": "git@git.jplusplus.org:dw-plugin-zip-export.git"
+        "url": "git@bitbucket.org/datawrapper/dw-plugin-export-zip.git"
     }
 }
