--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-    "name": "login-twitter",
+    "name": "signin-twitter",
     "description": "A plugin for signing in on Datawrapper using a Twitter account",
     "version": "0.1",
     "author": "Gregor Aisch",
     "repository": {
         "type": "git",
         "url": "ssh://git@bitbucket.org/datawrapper/dw-plugin-signin-twitter.git"
-    }
+    },
+    "dependencies": {
+        "core": "1.5.4"
+    },
 }
