--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "color-category-selector",
     "description": "Provides a new option type for selecting and customizing colors for categorical values, eg for usage in maps.",
-    "version": "0.0.1",
+    "version": "0.1.1",
     "dependencies": {
-        "core": "1.5.*"
+        "core": "1.6.2"
     },
     "repository": {
         "type": "git",
