--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "admin-plugins",
     "author": "Gregor Aisch",
     "version": "1.0",
-    "description": "The plugin kindly providing the very page you're looking at right now. Pro Tip: Try not to disable it."
-
+    "description": "The plugin kindly providing the very page you're looking at right now. Pro Tip: Try not to disable it.",
+    "repository": {
+        "type": "git",
+        "url": "git@bitbucket.org:datawrapper/plugin-admin-plugins.git"
+    }
 }
