added jshint config

--- a/package.json
+++ b/package.json
@@ -4,5 +4,15 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/datawrapper/datawrapper.git"
+    },
+    "jshintConfig": {
+        "globalstrict": false,
+        "globals": {
+            "dw": true,
+            "_": true,
+            "$": true,
+            "chroma": true,
+            "d3": true
+        }
     }
 }
