--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "datawrapper",
-    "version": "1.7.11",
+    "version": "1.8.beta",
     "repository": {
         "type": "git",
         "url": "https://github.com/datawrapper/datawrapper.git"
