--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "url": "git@bitbucket.org:datawrapper/pixel-tracker.git"
   },
   "dependencies": {
-    "express": "^4.9.7"
+    "express": "^4.9.7",
+    "request": "^2.45.0",
+    "underscore": "^1.7.0"
   }
 }
