--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.9.7",
     "nomnom": "^1.8.0",
     "request": "^2.45.0",
+    "toobusy": "^0.2.4",
     "underscore": "^1.7.0"
   }
 }
