cleanup, database tables, storing hits

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "analytics-pixelping",
-    "version": "0.0.1",
+    "name": "analytics-pixeltracker",
+    "version": "0.1.1",
     "author": "Gregor Aisch"
 }
