--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
     "name": "analytics-pixeltracker",
     "version": "0.1.1",
-    "author": "Gregor Aisch"
+    "author": "Gregor Aisch",
+    "repository": {
+    	"type": "git",
+    	"url": "git@bitbucket.org:jpp-cologne/plugin-analytics-pixeltracker.git"
+    }
 }
