--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datawrapper",
-  "version": "1.8.0-beta",
+  "version": "1.8.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/datawrapper/datawrapper.git"
