--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "swr-maps",
   "version": "0.1.0",
+  "description": "Custom D3 maps for SWR",
   "devDependencies": {
-    "mapshaper": "^0.2.18"
+    "mapshaper": "^0.2.17"
   }
 }
