--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "d3-maps",
   "version": "0.4.1",
+  "dependencies": {
+  	"d3-color-scale": "*"
+  },
   "description": "New version of Datawrapper maps. Based on D3.js. Supports zooming and more new features. Not compatible to IE<9."
 }
