--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "d3-maps",
   "version": "0.5.1",
   "dependencies": {
-  	"d3-color-scale": "*"
+  	"d3-color-scale": "*",
+  	"custom-tooltip": "*"
   },
   "description": "New version of Datawrapper maps. Based on D3.js. Supports zooming and more new features. Not compatible to IE<9."
 }
