--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "custom-tooltop",
+   "name": "custom-tooltip",
    "version": "1.0.0",
    "description": "Visualizations like our maps and the scatterplot need a simple way to allow custom tooltips. This plugin provides that"
 }
