--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "d3-bars",
-	"version": "0.0.1",
+	"description": "The second generation of bar charts in Datawrapper. Build in d3.js, HTML only. Provides four kinds of bar charts: normal bars, split bars, stacked bars and bullet bars. Actually eight types, since each one supports grouping of rows.",
+	"author": "Gregor Aisch",
+	"version": "0.6.1",
 	"dependencies": {
 		"options": "0.5.*"
 	}
