--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "d3-maps",
-  "version": "0.6.1",
+  "version": "0.6.2",
+  "author": "Gregor Aisch",
   "dependencies": {
     "d3-color-scale": "*",
     "custom-tooltip": "*"
