--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "visualization-scatterplot",
+  "name": "d3-scatter-plot",
   "description": "Simple scatterplot for Datawrapper.",
   "version": "1.1.1",
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:jpp-cologne/plugin-visualization-scatterplot.git"
+    "url": "git@bitbucket.org:jpp-cologne/plugin-d3-scatter-plot.git"
   },
   "dependencies": {
     "core": "1.8.2",
-    "visualization-raphael-chart": "1.5.1",
     "color-category-selector": "*"
   }
 }
