--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     }
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bower": "^0.20.0",
+    "grunt-bowercopy": "^1.2.3",
+    "grunt-subgrunt": "^0.4.5",
     "less": "^1.7.5"
   }
 }
