--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "gallery-pro",
    "version": "1.0.0",
-   "description": "A better public gallery, curated by us",
+   "description": "A curated public gallery",
    "dependencies": {
       "analytics-pixeltracker": "*"
    }
