--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"author": "Gregor Aisch",
 	"version": "0.1.0",
 	"dependencies": {
-		"core": "1.10.x"
+		"core": "1.10.x",
+		"checkout-paypal": "*"
 	}
 }
