--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "d3-lines",
-	"description": "The second generation of line charts in Datawrapper. Build in d3.js.",
+	"description": "The second generation of line charts in Datawrapper. Build in d3.js. Intended to fully replace visualization-line-chart after a while.",
 	"author": "Gregor Aisch",
 	"version": "0.1.1",
 	"dependencies": {
