--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"version": "0.1.0",
 	"dependencies": {
 		"core": "1.10.x",
-		"checkout-paypal": "*"
+		"checkout-paypal": "*",
+		"analytics-pixeltracker": "*"
 	}
 }
