--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
 	"author": "Gregor Aisch",
 	"version": "0.1.0",
 	"dependencies": {
-		"core": "1.10.x",
-		"checkout-paypal": "*",
-		"analytics-pixeltracker": "*"
+		"core": "1.10.x"
 	}
 }
