--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "d3-scatter-plot",
-  "description": "Simple scatterplot for Datawrapper.",
-  "version": "1.1.1",
+  "description": "Scatterplot visualization for Datawrapper.",
+  "version": "1.2.1",
   "repository": {
     "type": "git",
     "url": "git@bitbucket.org:jpp-cologne/plugin-d3-scatter-plot.git"
