--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "forkable-chatrs",
+    "name": "forkable-charts",
     "version": "1.0.0",
     "author": "Gregor Aisch",
     "repository": {
