--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "analytics-pixeltracker",
-    "description": "A highly scalable chart tracking solution for Datawrapper",
+    "description": "A highly scalable chart tracking solution for Datawrapper's published charts",
     "version": "0.6.2",
     "author": "Gregor Aisch",
     "repository": {
